--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 3.0.2
   13-06-30
   Feature
+  * #i0006: Integration of the Constant Editor
   * #49525: Slider for org news
             Effected files:
             * static/news/402     ( new )
