--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+3.0.4
+  15-04-13
+  Improvement
+  * #i0009: Improve CSS in context with Foundation
+
 3.0.3
   13-07-23
   Feature
@@ -31,12 +36,12 @@
                   * wrap-horizontal_02.gif            ( new )
                   * typo3_netzmacher_background.png   ( new )
               * index.html
-  
+
 1.3.3
   12-03-17
   Improvement
   - CSS: menue levels
-  
+
 1.3.2
   12-03-04
   Imrovements
@@ -64,12 +69,12 @@
   Maintenance
   - CSS: input password got a border
   - CSS: TYPO3 logo becomes background image
-  
+
 1.0.1
   10-08-30
   Publishing
   - Adding the manual
-  
+
 0.0.1
   10-08-25
   Dirk Wildt  <http://wildt.at.die-netzmacher.de>
